--- a/index.html
+++ b/index.html
@@ -5,13 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bb4650ba86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
-        <div class="img"></div>
+        <div class="img" id="start">
+          <div class="logo">MALEY</div>
+          <div class="grid">
+            <div class="object"><a href="#about-us" class="menu">О нас</a></div>
+            <div class="object"><a href="#products" class="menu">Наши продукты</a></div>
+            <div class="object"><a href="#partners" class="menu">Новости</a></div>
+            <div class="object"><a href="#careers" class="menu">Свадьбы</a></div>
+            <div class="object"><a href="#contacts" class="menu">Контакты</a></div>
+            <div class="object"><a href="#reviews" class="menu">Отзывы</a></div>
+          </div>
+        </div>
     </div>
-    <div class="main"></div>
+    <div class="blocks">
+      <div class="start"><a href="#start"><i class="fa-solid fa-arrow-up fa-3x" style="color:grey"></i></a></div>
+      <div class="about-us" id="about-us">
+        <div class="text">
+          <h3 style="padding: 250px 0px 20px 150px; font-weight: bold; text-align: left;">Что такое Maley?</h3>
+          <p style="padding: 0px 0px 20px 150px">
+            Изделия "MALEY" исполняются гармонично и стильно, что безоговорочно эффектно дополнит любое значимое событие.<br><br>При создании десертов используется исключительно свежая и качественная продукция. Никакой экономии на более дешёвых материалах.<br><br>Исполним вашу задумку и создадим идеальное сопровождение для любого случая.</p>
+          </div>
+        <img src="images/cake.png" style="width: 800px; margin-left: 15%; object-fit: cover;">
+      </div>
+      <div class="products" id="products">
+        <h3>Наши продукты</h3>
+        <div class="list">
+          <div class="cake">
+            <img src="images/middle.png" style="width: 400px;">
+            <p style="font-size: 25px;">Торт на заказ 18 см</p>
+            <p style="width: 400px; text-align: center;">Индивидуальный торт на заказ диаметром 18 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>
+            <b>от 3490р.</b>
+          </div>
+          <div class="cake">
+            <img src="images/big.png" style="width: 400px;">
+            <p style="font-size: 25px;">Торт на заказ 24см</p>
+            <p style="width: 400px; text-align: center;">Индивидуальный торт на заказ диаметром 24 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>
+            <b> от 4990р.</b>
+          </div>
+          <div class="cake">
+            <img src="images/cupcake.png" style="width: 400px;">
+            <p style="font-size: 25px;">Набор капкейков</p>
+            <p style="width: 400px; text-align: center;">Капкейки - пирожные небольшого размера, которые идеально подойдут, чтобы порадовать себя или даже небольшую компанию. Изготовлены из классического бисквита и крем-чиза.</p>
+            <p style="width: 400px; text-align: center;">Оформление - индивидуальное</p>
+            <b> от 990р.</b>
+          </div>
+        </div>
+      </div>
+      <div class="partners" id="partners">
+        <h3>Новости</h3>
+        <div class="news">
+          <div class="new">
+            <div class="rect"></div>
+        </div>
+        <div class="new">
+          <div class="rect"></div>
+        </div>
+        <div class="new">
+          <div class="rect"></div>
+        </div>
+      </div>
+      </div>
+    
+      <div class="careers" id="careers">
+        <div class="celebrate">
+        <h3 style="padding-bottom: 60px;">Свадьбы</h3>
+        <p style="text-align: center;">Свадебная церемония — действительно приятное событие и начало нового этапа жизни для молодоженов. Это важный день для жениха и невесты. Все родственники, друзья и приглашенные гости радуются свадьбе молодоженов.</p>
+        <p style="text-align: center;">Сегодня при слове «свадьба» каждый из нас представляет чёрно-белые фигурки жениха и невесты, золотые кольца, лимузин, шампанское и белоснежных голубей.</p>
+        <p style="text-align: center;">А ещё - торт. Он обязательно присутствует на любой свадьбе. И, зачастую, является её главным украшением</p>
+        </div>
+        <div class="marriage">
+          <img src="images/marriage.jpg" style="height: 100%;">
+        </div>
+      </div>
+      <div class="contacts" id="contacts">
+        <div class="ann">
+          <img src="images/ann.jpg" style="height: 100%">
+        </div>
+        <div class="aboutme">
+          <p style="font-size: 50px; font-weight: 500; margin-bottom: 0px;">Анна</p>
+          <p style="font-size: 20px; font-weight: 500; margin-bottom: 10px;">19 лет</p>
+          <p>Основатель бренда кондитерских изделий "MALEY".</p>
+          <div class="vk">
+            <i class="fa-brands fa-vk" style="padding-right: 12px;"></i>
+            <a href="https://vk.com/id_nenikuji" target="_blank">id_nenikuji</a>
+          </div>
+          <div class="number">
+            <i class="fa-solid fa-phone" style="padding-right: 10px;"></i>
+            +7 (999) 99-99-99
+          </div>
+        </div>
+      </div>
+      <div class="reviews" id="reviews">
+        <div class="review-block-1">
+          <div class="photo">
+              <img src="images/photo1.jpg" style="object-fit: cover; width: 150px; height: 150px;">
+              <div class="review">
+                <i class="fa-solid fa-arrows-to-dot" style="padding-bottom: 10px;"></i>
+                20 см
+                <p style="border-bottom: 2px solid grey; margin: 0px 75px 10px 75px; padding-bottom: 10px;">Стоимость - 4490р.</p>
+                <p style="margin: 0px 20px 10px 20px">Шикарный торт, заказывали в качестве подарка на свадьбу. Аня - просто молодец, торт получился шедевральным. Готов был в сроки, смотрелся на столе отлично, гости оценили</p>
+                <p style="border-top: 2px grey solid; margin: 0px 75px 0px 75px; padding-top: 10px;">Дмитрий</p>
+              </div>
+            </div>
+        </div>
+        <div class="review-block-2">
+          <h3 style="margin-bottom:20px; padding:0px; color: white;">Отзывы</h3>
+          <div class="photo">
+            <img src="images/photo2.jpg" style="object-fit: cover; width: 150px; height: 150px;">
+            <div class="review">
+              <i class="fa-solid fa-arrows-to-dot" style="padding-bottom: 10px;"></i>
+              24 см
+              <p style="border-bottom: 2px solid grey; margin: 0px 75px 10px 75px; padding-bottom: 10px;">Стоимость - 5190р.</p>
+              <p style="margin: 0px 20px 10px 20px">Шикарный торт, заказывали в качестве подарка на свадьбу. Аня - просто молодец, торт получился шедевральным. Готов был в сроки, смотрелся на столе отлично, гости оценили</p>
+              <p style="border-top: 2px grey solid; margin: 0px 75px 0px 75px; padding-top: 10px;">Арина</p>
+            </div>
+          </div>
+        </div>
+        <div class="review-block-3">
+          <div class="photo">
+            <img src="images/photo3.jpg" style="object-fit: cover; width: 150px; height: 150 px;">
+            <div class="review">
+              <i class="fa-solid fa-arrows-to-dot" style="padding-bottom: 10px;"></i>
+              18 см
+              <p style="border-bottom: 2px solid grey; margin: 0px 75px 10px 75px; padding-bottom: 10px;">Стоимость - 3490р.</p>
+              <p style="margin: 0px 20px 10px 20px">Шикарный торт, заказывали в качестве подарка на свадьбу. Аня - просто молодец, торт получился шедевральным. Готов был в сроки, смотрелся на столе отлично, гости оценили</p>
+              <p style="border-top: 2px grey solid; margin: 0px 75px 0px 75px; padding-top: 10px;">Елена</p>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <div class="bottom"></div>
+    <script src="script.js"></script>
   </body>
 </html>
