--- a/index.html
+++ b/index.html
@@ -60,13 +60,34 @@
         <h3>Новости</h3>
         <div class="news">
           <div class="new">
-            <div class="rect"></div>
+            <a href="#partners" class="newa">
+            <img src="images/news1.jpg" style="height: 100%; width: 350px; object-fit: cover;">
+            <div class="rect">
+              <p style="font-size: 20px; font-weight: bold; padding: 10px 0px 0px 10px;">Название новости</p>
+                <p style="font-size: 13px; padding-left: 10px;">Описание новости</p>
+                <p style="margin-left: 60%;">17 декабря 2022г.</p>
+            </div>
+          </a>
+          </div>
+        <div class="new">
+          <a href="#partners" class="newa">
+          <img src="images/news2.jpg" style="height: 100%; width: 350px; object-fit: cover;">
+          <div class="rect">
+            <p style="font-size: 20px; font-weight: bold; padding: 10px 0px 0px 10px;">Название новости</p>
+              <p style="font-size: 13px; padding-left: 10px;">Описание новости</p>
+              <p style="margin-left: 60%;">18 декабря 2022г.</p>
+          </div>
+        </a>
         </div>
         <div class="new">
-          <div class="rect"></div>
-        </div>
-        <div class="new">
-          <div class="rect"></div>
+          <a href="#partners" class="newa">
+          <img src="images/news3.jpg" style="height: 100%; width: 350px; object-fit: cover;">
+          <div class="rect">
+            <p style="font-size: 20px; font-weight: bold; padding: 10px 0px 0px 10px;">Название новости</p>
+              <p style="font-size: 13px; padding-left: 10px;">Описание новости</p>
+              <p style="margin-left: 60%;">19 декабря 2022г.</p>
+          </div>
+        </a>
         </div>
       </div>
       </div>
