--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
           </div>
         </div>
       </div>
-    <div class="bottom"></div>
+    <div class="bottom">
+      <p>Created by Madden</p>
+      <p style="margin-bottom: 0px;">2022</p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
