--- a/index.html
+++ b/index.html
@@ -30,35 +30,41 @@
           <p style="padding: 0px 0px 20px 150px">
             Изделия "MALEY" исполняются гармонично и стильно, что безоговорочно эффектно дополнит любое значимое событие.<br><br>При создании десертов используется исключительно свежая и качественная продукция. Никакой экономии на более дешёвых материалах.<br><br>Исполним вашу задумку и создадим идеальное сопровождение для любого случая.</p>
           </div>
-        <img src="images/cake.png" style="width: 800px; margin-left: 15%; object-fit: cover;">
+          <div class="scale1"><img src="images/cake.png" style="width: 800px; margin-left: 15%; object-fit: cover;"></div>
       </div>
       <div class="products" id="products">
-        <h3>Наши продукты</h3>
+        <h3 style="margin-bottom: 80px;">Наши продукты</h3>
         <div class="list">
+          <div class="scale">
           <div class="cake">
-            <img src="images/middle.png" style="width: 400px;">
+            <img src="images/middle.png" style="width: 300px;">
             <p style="font-size: 25px;">Торт на заказ 18 см</p>
-            <p style="width: 400px; text-align: center;">Индивидуальный торт на заказ диаметром 18 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>
-            <b>от 3490р.</b>
+            <p style="text-align: center;">Индивидуальный торт на заказ диаметром 18 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>  
+            <a href="https://vk.com/maley_cake_vn" style="text-decoration: none; color: white;"><div class="order">Заказать от 3490р</div></a>
           </div>
-          <div class="cake">
-            <img src="images/big.png" style="width: 400px;">
+        </div>
+        <div class="scale">  
+        <div class="cake">
+            <img src="images/big.png" style="width: 300px;">
             <p style="font-size: 25px;">Торт на заказ 24см</p>
-            <p style="width: 400px; text-align: center;">Индивидуальный торт на заказ диаметром 24 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>
-            <b> от 4990р.</b>
+            <p style="text-align: center;">Индивидуальный торт на заказ диаметром 24 сантиметра идеально подойдёт для свадьбы, дня рождения или просто в качестве подарка близкому человеку.</p>
+            <a href="https://vk.com/maley_cake_vn" style="text-decoration: none; color: white;"><div class="order">Заказать от 4990р</div></a>
           </div>
+        </div>
+          <div class="scale">
           <div class="cake">
-            <img src="images/cupcake.png" style="width: 400px;">
+            <img src="images/cupcake.png" style="width: 300px;">
             <p style="font-size: 25px;">Набор капкейков</p>
-            <p style="width: 400px; text-align: center;">Капкейки - пирожные небольшого размера, которые идеально подойдут, чтобы порадовать себя или даже небольшую компанию. Изготовлены из классического бисквита и крем-чиза.</p>
-            <p style="width: 400px; text-align: center;">Оформление - индивидуальное</p>
-            <b> от 990р.</b>
+            <p style="text-align: center;">Капкейки - пирожные небольшого размера, которые идеально подойдут, чтобы порадовать себя или даже небольшую компанию</p>
+            <a href="https://vk.com/maley_cake_vn" style="text-decoration: none; color: white;"><div class="order">Заказать от 990р</div></a>
           </div>
+        </div>
         </div>
       </div>
       <div class="partners" id="partners">
         <h3>Новости</h3>
         <div class="news">
+          <div class="scale">
           <div class="new">
             <a href="#partners" class="newa">
             <img src="images/news1.jpg" style="height: 100%; width: 350px; object-fit: cover;">
@@ -69,6 +75,8 @@
             </div>
           </a>
           </div>
+        </div>
+        <div class="scale">
         <div class="new">
           <a href="#partners" class="newa">
           <img src="images/news2.jpg" style="height: 100%; width: 350px; object-fit: cover;">
@@ -79,7 +87,9 @@
           </div>
         </a>
         </div>
-        <div class="new">
+      </div>
+      <div class="scale">  
+      <div class="new">
           <a href="#partners" class="newa">
           <img src="images/news3.jpg" style="height: 100%; width: 350px; object-fit: cover;">
           <div class="rect">
@@ -89,6 +99,7 @@
           </div>
         </a>
         </div>
+      </div> 
       </div>
       </div>
     
